--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "ahooks": "^3.7.10",
     "clsx": "^2.1.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "^14.1.0",
     "next-intl": "^3.9.1",
     "react": "^18",
